extends Node


onready var deck = $Deck
onready var handPlayer = $HandPlayer
onready var handAnnie = $HandAnnie
onready var handXeno = $HandXeno
onready var handRobot = $HandRobot



# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


